# rust_med

./: .gitignore  AGENT.md  CLAUDE.md  DISTRIBUTION_README.md  PRODUCTION.md  README.md  alex.md  icon_gen.bat  icon_gen.sh  package-lock.json  package.json  plan.md  setup.sh  test_encryption.md
.claude/: settings.local.json
binaries/: README.txt
binaries/models/: README.txt
frontend/: .prettierrc  AUTH_README.md  README.md  eslint.config.js  package-lock.json  package.json
frontend/src/lib/: index.ts  tauriService.ts  types.ts
frontend/src/lib/components/: app-sidebar.svelte  auth-provider.svelte  authenticated-layout.svelte
frontend/src/lib/components/custom/: auth-status.svelte  login-form.svelte  medical-note-viewer.svelte  register-form.svelte  setup-wizard.svelte
frontend/src/lib/components/custom/table/: index.ts  table.svelte  tbody.svelte  td.svelte  th.svelte  thead.svelte  tr.svelte
frontend/src/lib/hooks/: auth-context.svelte.ts  use-auth.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/notes/: +page.svelte
frontend/src/routes/playground/: +page.svelte
frontend/src/routes/profile/: +page.svelte
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  project_structure.MD  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: auth.rs  commands.rs  constants.rs  db.rs  downloads.rs  main.rs
src/modules/: audioConverter.js  notesManager.js  recordingManager.js  transcriptionManager.js  uiManager.js  utils.js  waveformVisualizer.js
(+38 files in other folders)
