[package]
name = "OnDevice_Medical_Note"
version = "0.1.0"
description = "Medical Note Generator"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-fs = { version = "2.0.0" }
tauri-plugin-shell = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
